--- a/src/static/auth.css
+++ b/src/static/auth.css
@@ -2,7 +2,7 @@ html, body {
   font-family: Tahoma, sans-serif; 
   height: 100%;
   margin: 0;
-  background-image: url('../styles/images/background.png');
+  background-image: url('images/background.png');
   background-size: auto;
   background-repeat: repeat;
   background-position: center;
@@ -14,3 +14,49 @@ html, body {
   width: 100vw; 
   position: relative; 
 }
+
+body {
+            font-family: Arial;
+            background-color: #f0f2f5;
+            padding: 40px;
+        }
+        .container {
+            background-color: white;
+            width: 400px;
+            margin: auto;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+        }
+        h2 {
+            text-align: center;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        label {
+            font-weight: bold;
+        }
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+        }
+        .error {
+            color: red;
+            font-size: 0.9em;
+        }
+        input[type="submit"] {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 6px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
