--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -4,7 +4,7 @@ html, body {
   font-family: Tahoma, sans-serif; 
   height: 100%;
   margin: 0;
-  background-image: url('../styles/images/background.png');
+  background-image: url('images/background.png');
   background-size: auto;
   background-repeat: repeat;
   background-position: center;
