--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Charge styles.css depuis /static/styles.css -->
     <link rel="stylesheet"
           href="{{ url_for('static', filename='styles.css') }}">
-
-    <link rel="shortcut icon" href="../styles/images/background.png" />
+    <link rel="shortcut icon"
+          href="{{ url_for('static', filename='images/background.png') }}" />
     <!-- Icons  -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Animate.css for letter animation -->
